--- a/Lembo/Ciclo de Cultivo/CSS/style_actualizar_ciclo_cultivo.css
+++ b/Lembo/Ciclo de Cultivo/CSS/style_actualizar_ciclo_cultivo.css
@@ -142,6 +142,8 @@ h4 {
     border-radius: 0.4rem;
     padding: 0.8rem;
     font-size: 1.4rem;
+    width: 30.2rem;
+    height: 3.8rem;
 }
 
 .main__buttons {
