--- a/fronted/public/views/ciclo_cultivo/actualizar_ciclo_cultivo.html
+++ b/fronted/public/views/ciclo_cultivo/actualizar_ciclo_cultivo.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Actualizar Ciclo Cultivo</title>
-    <link rel="stylesheet" href="../CSS/style_actualizar_ciclo_cultivo.css">
+    <link rel="stylesheet" href="../../css/pages/ciclo_cultivo/style_actualizar_ciclo_cultivo.css">
 </head>
 <body>
     <header class="header">
