--- a/Lembo/Ciclo de Cultivo/CSS/style_datos_ciclo_cultivo.css
+++ b/Lembo/Ciclo de Cultivo/CSS/style_datos_ciclo_cultivo.css
@@ -290,4 +290,5 @@ button.form__btn:active {
     .header__link {
         margin-left: 15%;
     }
-}
+}/* este da pero no no coloquen lo rsponsiv al maximo lo dejan maso en en 280 va bien menos se sale 
+ */
