--- a/Lembo/Insumos/CSS/style_listar_insumo.css
+++ b/Lembo/Insumos/CSS/style_listar_insumo.css
@@ -28,7 +28,7 @@ body {
     font-family: var(--font-primary);
     margin: 0;
     padding: 0;
-    background-image: url('../img/cafe.jpg');
+    background-image: url('/Lembo/imagenes proyecto/Cultivos.jpg');
     background-size: cover;
     color: #000;
     min-height: 100vh; /* Asegura que el body tenga al menos la altura de la ventana */
