--- a/fronted/public/views/ciclo_cultivo/crear_ciclo_cultivo.html
+++ b/fronted/public/views/ciclo_cultivo/crear_ciclo_cultivo.html
@@ -8,59 +8,67 @@
     <link rel="stylesheet" href="/fronted/public/css/main.css">
     <script src="/fronted/public/views/components/header.js"></script>
     <link rel="stylesheet" href="/fronted/public/css/components/forms.css">
-    <!-- <script src="../JS/validacion_datos.js" defer></script>  -->
 </head>
 
 <body>
     <header class="header"></header>
 
     <main class="form-container">
-
-        <form class="form" action="http://localhost:3000/CicloCultivo" method="POST">
+        <form class="form" action="http://localhost:3000/CicloCultivo" method="POST" enctype="multipart/form-data">
             <h2 class="form__title">Datos Ciclo Cultivo</h2>
 
-            <label class="form__label">ID Ciclo Cultivo</label>
-            <input class="form__input form__input--ID" type="text" name="cicloID">
+            <div class="form_row">
+                <div class="form_column">
 
-            <label class="form__label">Nombre Ciclo Cultivo</label>
-            <input class="form__input form__input--name" type="text" name="cicloName">
+                    <div class="form_group">
+                        <label class="form__label">Cargar imagen</label>
+                        <input class="form__input form__input--imagen" type="file" name="image" id="image">
+                    </div>
 
-            <label class="form__label">Fecha Siembra</label>
-            <input class="form__input form__input--siembra" type="date" name="siembraDate">
+                    <div class="form_group">
+                        <label class="form__label">ID Ciclo Cultivo</label>
+                        <input class="form__input form__input--ID" type="text" name="cicloID">
+                    </div>
 
-            <label class="form__label">Fecha Cosecha</label>
-            <input class="form__input form__input--cosecha" type="date" name="cosechaDate">
+                    <div class="form_group">
+                        <label class="form__label">Nombre Ciclo Cultivo</label>
+                        <input class="form__input form__input--name" type="text" name="cicloName">
+                    </div>
 
-            <label class="form__label">Novedades</label>
-            <input class="form__input form__input--news" type="text" name="news">
+                    <div class="form_group">
+                        <label class="form__label">Fecha Siembra</label>
+                        <input class="form__input form__input--siembra" type="date" name="siembraDate">
+                    </div>
 
-            <label class="form__label">Descripción</label>
-            <input class="form__input form__input--description" type="text" name="description">
+                    <div class="form_group">
+                        <label class="form__label">Fecha Cosecha</label>
+                        <input class="form__input form__input--cosecha" type="date" name="cosechaDate">
+                    </div>
 
-            <label class="form__label">Estado (activo / inactivo)</label>
-            <select name="state" class="form__input form__input--state">
-                <option value="">Seleccione una opción</option>
-                <option value="Activo">Activo</option>
-                <option value="Inactivo">Inactivo</option>
-            </select>
+                    <div class="form_group">
+                        <label class="form__label">Novedades</label>
+                        <input class="form__input form__input--news" type="text" name="news">
+                    </div>
 
-            <svg class="main__content-img-product" xmlns="http://www.w3.org/2000/svg" width="200" height="150"
-                viewBox="0 0 24 24" fill="none" stroke="#dcdcdc" stroke-width="1" stroke-linecap="round"
-                stroke-linejoin="round">
-                <path stroke="none" d="M0 0h24v24H0z" fill="none" />
-                <path d="M15 8h.01" />
-                <path d="M12.5 21h-6.5a3 3 0 0 1 -3 -3v-12a3 3 0 0 1 3 -3h12a3 3 0 0 1 3 3v6.5" />
-                <path d="M3 16l5 -5c.928 -.893 2.072 -.893 3 0l4 4" />
-                <path d="M14 14l1 -1c.67 -.644 1.45 -.824 2.182 -.54" />
-                <path d="M16 19h6" />
-                <path d="M19 16v6" />
-            </svg>
+                    <div class="form_group">
+                        <label class="form__label">Descripción</label>
+                        <input class="form__input form__input--description" type="text" name="description">
+                    </div>
 
-            <button type="submit" class="form__btn form__btn--registrar">Crear</button>
+                    <div class="form_group">
+                        <label class="form__label">Estado (activo / inactivo)</label>
+                        <select name="state" class="form__input form__input--state">
+                            <option value="">Seleccione una opción</option>
+                            <option value="Activo">Activo</option>
+                            <option value="Inactivo">Inactivo</option>
+                        </select>
+                    </div>
 
+                    <button type="submit" class="form__btn form__btn--registrar">Crear</button>
+
+                </div>
+            </div>
         </form>
-
     </main>
 </body>
-
 </html>
